--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
     "express": "^4.17.1"
   },
   "devDependencies": {
+    "concurrently": "^6.3.0",
     "nodemon": "^2.0.14"
   },
   "scripts": {
-    "dev": "nodemon server.js"
+    "dev": "concurrently \"nodemon server.js\" \"cd client && npm run start\""
   },
   "repository": {
     "type": "git",
