--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.12"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.12",
+    "sha256": "^0.2.0"
   },
   "devDependencies": {
     "concurrently": "^6.3.0",
